<resources>
    <string name="app_name" translatable="false">Home of GAA News</string>
    <string name="app_title_login">Login</string>
    <string name="app_title_clubs">Club List</string>
    <string name="app_title_feed" translatable="false">Twitter Feed</string>
    <string name="loadingText">Home of GAA News</string>
    <string name="CONSUMER_KEY" translatable="false">pBJqO6Z0bk3gPrJ6thG1xPRSY</string>
    <string name="CONSUMER_SECRET" translatable="false">yMtsg4RrAgmkJDl21Tz6uSGljM9EBMcO3FDfLX3WJcAshYT9Wn</string>
    <string name="clubListTextView">Select your preferred club to load their Twitter page!</string>
    <string name="loading">Loading…</string>
    <string name="antrim_gaa">Antrim GAA</string>
    <string name="armagh_gaa">Armagh GAA</string>
    <string name="carlow_gaa">Carlow GAA</string>
    <string name="cavan_gaa">Cavan GAA</string>
    <string name="clare_gaa">Clare GAA</string>
    <string name="cork_gaa">Cork GAA</string>
    <string name="derry_gaa">Derry GAA</string>
    <string name="donegal_gaa">Donegal GAA</string>
    <string name="down_gaa">Down GAA</string>
    <string name="dublin_gaa">Dublin GAA</string>
    <string name="fermanagh_gaa">Fermanagh GAA</string>
    <string name="galway_gaa">Galway GAA</string>
    <string name="kerry_gaa">Kerry GAA</string>
    <string name="kildare_gaa">Kildare GAA</string>
    <string name="kilkenny_gaa">Kilkenny GAA</string>
    <string name="laois_gaa">Laois GAA</string>
    <string name="leitrim_gaa">Leitrim GAA</string>
    <string name="limerick_gaa">Limerick GAA</string>
    <string name="longford_gaa">Longford GAA</string>
    <string name="louth_gaa">Louth GAA</string>
    <string name="mayo_gaa">Mayo GAA</string>
    <string name="meath_gaa">Meath GAA</string>
    <string name="monaghan_gaa">Monaghan GAA</string>
    <string name="offaly_gaa">Offaly GAA</string>
    <string name="roscommon_gaa">Roscommon GAA</string>
    <string name="sligo_gaa">Sligo GAA</string>
    <string name="tipperary_gaa">Tipperary GAA</string>
    <string name="tyrone_gaa">Tyrone GAA</string>
    <string name="waterford_gaa">Waterford GAA</string>
    <string name="westmeath_gaa">Westmeath GAA</string>
    <string name="wexford_gaa">Wexford GAA</string>
    <string name="wicklow_gaa">Wicklow GAA</string>
    <string name="logout_title">Logout</string>
    <string name="timelineBtn">Timeline</string>
    <string name="searchfeedBtn">Search Feed</string>
    <string name="tweetBtn" translatable="false">Tweet</string>
</resources>
